# etl-weather

./: .coverage  .debug_check_env.py  .debug_load_then_import.py  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  deploy.sh  etl-weather.service  nginx-etl-weather.conf  passenger_wsgi.py  pyproject.toml  requirements.txt  test_import.py
.github/workflows/: ci.yml
src/etl_weather/: __init__.py  cli.py  compare.py  config.py  fetch.py  report.py  transform.py  utils.py  viz.py  web.py
src/etl_weather/templates/: report.html
src/etl_weather/webui/static/: app.js  styles.css
src/etl_weather/webui/templates/: index.html
tests/: conftest.py  test_fetch.py  test_funfact_endpoint.py  test_report.py  test_transform.py  test_utils.py
tests/fixtures/: air_min.json  weather_min.json
