[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-weather"
version = "0.1.0"
description = "ETL Cuaca & Kualitas Udara (Open-Meteo) -> Laporan HTML"
requires-python = ">=3.10"
dependencies = [
  "typer[all]",
  "httpx>=0.27",
  "pandas>=2.2",
  "altair>=5.0",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "aiofiles>=23.0",
  "python-dotenv>=1.0"
]

[project.scripts]
etl-weather = "etl_weather.cli:app"
etl-weather-web = "etl_weather.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
ai = [
  "google-generativeai>=0.7"
]

dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "black>=24.8",
  "pre-commit>=3.7"
]