[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-weather"
version = "1.0.0"
description = "ETL Cuaca & Kualitas Udara (Open-Meteo) -> GGWP Weather - Web UI"
requires-python = ">=3.10"
dependencies = [
  "typer[all]",
  "httpx>=0.28",
  "pandas>=2.3.3",
  "altair>=5.5.0",
  "jinja2>=3.1.6",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.11",
  "fastapi>=0.121",
  "uvicorn[standard]>=0.38",
  "aiofiles>=25.1.0",
  "python-dotenv>=1.2.1",
  "google-generativeai>=0.8.5"
]

[project.scripts]
etl-weather = "etl_weather.cli:app"
etl-weather-web = "etl_weather.web:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "black>=24.8",
  "pre-commit>=3.7"
]

[tool.setuptools.packages.find]
where = ["src"]